--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "35d66a44-7359-11ea-387b-f94ed747d8e0"
 authors = ["Eric S Fraga <e.fraga@ucl.ac.uk>"]
 version = "7.2.0"
 
+[compat]
+julia = "1.6"
+
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
