--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,12 @@
 name = "Fresa"
 uuid = "35d66a44-7359-11ea-387b-f94ed747d8e0"
 authors = ["Eric S Fraga <e.fraga@ucl.ac.uk>"]
-version = "8.0.12"
-
-[compat]
-julia = "1.6"
+version = "8.0.18"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+
+[compat]
+julia = "1.6"
